
    <LinearLayout 
    	xmlns:android="http://schemas.android.com/apk/res/android" 
    	android:orientation="vertical" 
    	android:layout_width="fill_parent" 
    	android:id="@+id/linearLayout1" 
    	android:layout_height="fill_parent" 
    	android:background="@color/brown">
        <TextView 
        	android:layout_width="wrap_content" 
        	android:id="@+id/textView1" 
        	android:layout_height="wrap_content" 
        	android:layout_gravity="center_horizontal" 
        	android:text="@string/location" 
        	android:layout_weight="1" 
        	android:textColor="@color/white" 
        	android:textSize="22dp"></TextView>
        <EditText 
        	android:layout_width="fill_parent" 
        	android:layout_height="wrap_content" 
        	android:layout_weight="1" 
        	android:id="@+id/editText1" android:hint="60607" android:inputType="number"></EditText>
        <TextView 
        	android:layout_width="wrap_content" 
        	android:id="@+id/textView2" 
        	android:text="@string/ordash" 
        	android:layout_height="wrap_content" 
        	android:layout_gravity="center_horizontal" 
        	android:layout_weight="1" 
        	android:textColor="@color/white" 
        	android:textSize="18dp"></TextView>
        <TextView 
        	android:layout_width="wrap_content" 
        	android:id="@+id/textView3" 
        	android:layout_height="wrap_content" 
        	android:layout_gravity="center_horizontal" 
        	android:text="@string/citystate" 
        	android:layout_weight="1" 
        	android:textColor="@color/white" 
        	android:textSize="18dp"></TextView>
        <AutoCompleteTextView 
        	android:layout_width="fill_parent" 
        	android:layout_height="wrap_content" 
        	android:id="@+id/autoCompleteTextView1" 
        	android:layout_weight="1" 
        	android:hint="Chicago" android:inputType="text"></AutoCompleteTextView>
        <TextView 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	android:layout_gravity="center_horizontal" 
        	android:id="@+id/textView4" 
        	android:text="@string/state" 
        	android:layout_weight="1" 
        	android:textColor="@color/white" 
        	android:textSize="18dp"></TextView>
        <AutoCompleteTextView android:layout_width="fill_parent" 
        	android:layout_height="wrap_content" 
        	android:id="@+id/autoCompleteTextView2" 
        	android:layout_weight="1" 
        	android:hint="Illinois" android:inputType="text"></AutoCompleteTextView>
        <Button 
        	android:layout_gravity="center_horizontal" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	android:id="@+id/button4" 
        	android:layout_weight="0" 
        	android:background="@drawable/leaf" 
        	android:layout_margin="4dip" 
        	android:text="Next" 
        	android:textColor="@color/white" 
        	android:textSize="20dp" 
        	android:textStyle="bold"></Button>
    </LinearLayout>
