
    <LinearLayout 
    	xmlns:android="http://schemas.android.com/apk/res/android" 
    	android:orientation="vertical" 
    	android:layout_width="fill_parent" 
    	android:id="@+id/linearLayout1" 
    	android:layout_height="fill_parent" 
    	android:background="@color/brown">
        <TextView 
        	android:layout_width="wrap_content" 
        	android:id="@+id/textView2" 
        	android:layout_height="wrap_content" 
        	android:text="@string/predators" 
        	android:layout_gravity="center_horizontal" 
        	android:layout_weight="1" 
        	android:textColor="@color/white" 
        	android:textSize="22dp"></TextView>
        	
        <TableRow 
        	android:layout_height="wrap_content" 
        	android:layout_width="fill_parent" 
        	android:id="@+id/tableRow1" 
        	android:layout_weight="1">
            <TextView 
            	android:id="@+id/textView3" 
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content" 
            	android:text="@string/dogs" 
            	android:layout_weight="1" 
            	android:width="30dp"
            	android:layout_gravity="top" 
            	android:textColor="@color/white" 
            	android:textSize="16dp"></TextView>
            <Spinner 
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content" 
        		android:id="@+id/spinner2" 
        		android:layout_weight="1"></Spinner>
        </TableRow>
        
        <TableRow 
        	android:layout_width="fill_parent" 
        	android:id="@+id/tableRow3" 
        	android:layout_height="wrap_content" 
        	android:layout_weight="1">
            <TextView 
            	android:layout_height="wrap_content" 
            	android:text="@string/cats" 
            	android:id="@+id/textView4" 
            	android:layout_gravity="top" 
            	android:layout_width="wrap_content" 
            	android:width="30dp"
            	android:layout_weight="1" 
            	android:textColor="@color/white" 
            	android:textSize="16dp"></TextView>
            <Spinner 
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content" 
        		android:id="@+id/spinner3" 
        		android:layout_weight="1"></Spinner>
        </TableRow>
        
        <TableRow 
        	android:layout_width="fill_parent" 
        	android:id="@+id/tableRow4" 
        	android:layout_height="wrap_content" 
        	android:layout_weight="1">
            <TextView 
            	android:layout_height="wrap_content" 
            	android:text="@string/coyotes" 
            	android:id="@+id/textView5" 
            	android:layout_gravity="top" 
            	android:layout_width="wrap_content" 
            	android:width="30dp"
            	android:layout_weight="1" 
            	android:textColor="@color/white" 
            	android:textSize="16dp"></TextView>
            <Spinner 
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content" 
        		android:id="@+id/spinner4" 
        		android:layout_weight="1"></Spinner>
        </TableRow>
        
        <TableRow 
        	android:layout_width="fill_parent" 
        	android:id="@+id/tableRow5" 
        	android:layout_height="wrap_content" 
        	android:layout_weight="1">
            <TextView 
            	android:layout_height="wrap_content" 
            	android:text="@string/hawks" 
            	android:id="@+id/textView6" 
            	android:layout_gravity="top" 
            	android:layout_width="wrap_content" 
            	android:width="30dp"
            	android:layout_weight="1" 
            	android:textColor="@color/white" 
            	android:textSize="16dp"></TextView>
            <Spinner 
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content" 
        		android:id="@+id/spinner5" 
        		android:layout_weight="1"></Spinner>
        </TableRow>
        
        <TableRow 
        	android:layout_width="fill_parent" 
        	android:id="@+id/tableRow6" 
        	android:layout_height="wrap_content" 
        	android:layout_weight="1">
            <TextView 
            	android:layout_height="wrap_content" 
            	android:text="@string/poisoned_grain" 
            	android:id="@+id/textView7" 
            	android:layout_width="wrap_content" 
            	android:width="30dp"
            	android:layout_weight="1" 
            	android:textColor="@color/white" 
            	android:textSize="16dp"></TextView>
            <Spinner 
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content"
        		android:id="@+id/spinner6" 
        		android:layout_weight="1"></Spinner>
        </TableRow>
       
        <Button 
        	android:layout_gravity="center_horizontal" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	android:text="Next" 
        	android:layout_weight="0" 
        	android:id="@+id/button9"
        	android:background="@drawable/leaf" 
        	android:textColor="@color/white" 
        	android:textSize="20dp" 
        	android:textStyle="bold" 
        	android:layout_margin="4dip"></Button>
    </LinearLayout>
