
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:layout_height="fill_parent" android:background="@color/brown">
        <TextView 
        	android:layout_width="wrap_content" 
        	android:id="@+id/textView1" 
        	android:text="@string/trees" 
        	android:layout_height="wrap_content" 
        	android:layout_gravity="center" 
        	android:textColor="@color/white" 
        	android:textSize="22dp"></TextView>
        	
        <TableRow 
        	android:layout_width="fill_parent" 
        	android:id="@+id/tableRow1" 
        	android:layout_height="wrap_content" 
        	android:layout_weight="1">
            <TextView 
            	android:layout_height="wrap_content" 
            	android:text="@string/nuts" 
            	android:id="@+id/textView2" 
            	android:layout_width="wrap_content" 
            	android:width="30dp"
            	android:layout_weight="1" 
            	android:textColor="@color/white" 
            	android:textSize="14dp"></TextView>
            <Spinner 
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content"
        		android:id="@+id/spinner1" 
        		android:layout_weight="1" android:prompt="@array/tree_array"></Spinner>
        </TableRow>
        
        <TableRow 
        	android:layout_width="fill_parent" 
        	android:id="@+id/tableRow2" 
        	android:layout_height="wrap_content" 
        	android:layout_weight="1">
            <TextView 
            	android:layout_height="wrap_content" 
            	android:text="@string/seed" 
            	android:id="@+id/textView3" 
            	android:layout_width="wrap_content" 
            	android:width="30dp"
            	android:layout_weight="1" 
            	android:textColor="@color/white" 
            	android:textSize="14dp"></TextView>
            <Spinner 
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content"
        		android:id="@+id/spinner2" 
        		android:layout_weight="1" android:prompt="@array/tree_array"></Spinner>
        </TableRow>
        
        <TableRow 
        	android:layout_width="fill_parent" 
        	android:id="@+id/tableRow3" 
        	android:layout_height="wrap_content" 
        	android:layout_weight="1">
            <TextView 
            	android:layout_height="wrap_content" 
            	android:text="@string/fruit" 
            	android:id="@+id/textView4" 
            	android:layout_width="wrap_content" 
            	android:width="30dp"
            	android:layout_weight="1" 
            	android:textColor="@color/white" 
            	android:textSize="14dp"></TextView>
            <Spinner 
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content"
        		android:id="@+id/spinner3" 
        		android:layout_weight="1" android:prompt="@array/tree_array"></Spinner>
        </TableRow>
        
        <TableRow 
        	android:layout_width="fill_parent" 
        	android:id="@+id/tableRow4" 
        	android:layout_height="wrap_content" 
        	android:layout_weight="1">
            <TextView 
            	android:layout_height="wrap_content" 
            	android:text="@string/tinyseed" 
            	android:id="@+id/textView5" 
            	android:layout_width="wrap_content" 
            	android:width="30dp"
            	android:layout_weight="1" 
            	android:textColor="@color/white" 
            	android:textSize="14dp"></TextView>
            <Spinner 
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content"
        		android:id="@+id/spinner4" 
        		android:layout_weight="1" android:prompt="@array/tree_array"></Spinner>
        </TableRow>
        
        <TableRow 
        	android:layout_width="fill_parent" 
        	android:id="@+id/tableRow5" 
        	android:layout_height="wrap_content" 
        	android:layout_weight="1">
            <TextView 
            	android:layout_height="wrap_content" 
            	android:text="@string/conif" 
            	android:id="@+id/textView6" 
            	android:layout_width="wrap_content" 
            	android:width="30dp"
            	android:layout_weight="1" 
            	android:textColor="@color/white" 
            	android:textSize="14dp"></TextView>
            <Spinner 
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content"
        		android:id="@+id/spinner5" 
        		android:layout_weight="1" android:prompt="@array/tree_array"></Spinner>
        </TableRow>
        
        <TableRow 
        	android:layout_width="fill_parent" 
        	android:id="@+id/tableRow6" 
        	android:layout_height="wrap_content" 
        	android:layout_weight="1">
            <TextView 
            	android:layout_height="wrap_content" 
            	android:text="Other" 
            	android:id="@+id/textView7" 
            	android:layout_width="wrap_content" 
            	android:width="30dp"
            	android:layout_weight="1" 
            	android:textColor="@color/white" 
            	android:textSize="14dp"></TextView>
            <EditText 
            	android:id="@+id/editText1" 
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:width="80dp"
        		android:layout_weight="1"></EditText>
        </TableRow>
        
        <Button 
        	android:layout_gravity="center_horizontal" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	android:text="Next" 
        	android:id="@+id/button5" 
        	android:layout_weight="0" 
        	android:background="@drawable/leaf" 
        	android:textColor="@color/white" 
        	android:textSize="20dp" 
        	android:textStyle="bold" 
        	android:layout_margin="4dip"></Button>
    </LinearLayout>
