
    <LinearLayout 
    	xmlns:android="http://schemas.android.com/apk/res/android" 
    	android:orientation="vertical" 
    	android:layout_width="fill_parent" 
    	android:id="@+id/linearLayout1" 
    	android:layout_height="fill_parent" 
    	android:isScrollContainer="true"
    	android:gravity="center"
    	android:background="@color/brown">
        <TextView 
        	android:layout_height="wrap_content"
        	android:text="@string/squirrelnum" 
        	android:id="@+id/textView1" 
        	android:layout_width="fill_parent" 
        	android:textSize="22dp"
        	android:gravity="center_horizontal"
        	android:textColor="@color/white" android:layout_weight="1"></TextView>
        <TableRow 
        	android:layout_height="wrap_content" 
        	android:id="@+id/tableRow2"
        	android:layout_width="fill_parent"
        	android:gravity="center" android:layout_weight="1">
            <ImageView 
            	android:scaleType="centerInside" 
            	android:layout_width="wrap_content" 
            	android:src="@drawable/foxsquirrel1" 
            	android:layout_height="wrap_content" 
            	android:id="@+id/imageView2" 
            	android:layout_weight="1"></ImageView>
            <TextView 
            	android:layout_width="wrap_content" 
            	android:text="@string/foxsquirrelnum" 
            	android:layout_height="wrap_content" 
            	android:id="@+id/textView3" 
            	android:layout_weight="1"
            	android:textSize="18dp"
            	android:textColor="@color/white" ></TextView>
        </TableRow>
        
        <TableRow 
        	android:id="@+id/tableRow3" 
        	android:layout_height="wrap_content"
        	android:layout_width="fill_parent" android:layout_weight="1">
        	<com.squirrel.NumberPicker 
        		android:id="@+id/Picker1" 
        		android:orientation="horizontal" 
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content" 
        		android:layout_gravity="center_horizontal" android:layout_weight="1"></com.squirrel.NumberPicker>
        </TableRow>
        
        <TableRow 
        	android:layout_height="wrap_content" 
        	android:id="@+id/tableRow1" 
        	android:layout_width="fill_parent" 
        	android:gravity="center" android:layout_weight="1">
            <ImageView 
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content" 
            	android:id="@+id/imageView1" 
            	android:src="@drawable/eastgray1" 
            	android:layout_weight="1"></ImageView>
            <TextView 
            	android:layout_width="wrap_content" 
            	android:text="@string/graysquirrel" 
            	android:layout_height="wrap_content" 
            	android:id="@+id/textView2" 
            	android:layout_weight="1"
            	android:textSize="18dp"
            	android:textColor="@color/white" ></TextView>
        </TableRow>
        
        <TableRow 
        	android:id="@+id/tableRow4" 
        	android:layout_height="wrap_content" 
        	android:layout_width="fill_parent" android:layout_weight="1">
        	<com.squirrel.NumberPicker 
        		android:id="@+id/Picker2" 
        		android:orientation="horizontal" 
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content" 
        		android:layout_weight="1" 
        		android:layout_gravity="center_horizontal"></com.squirrel.NumberPicker>
        </TableRow>
<Button android:background="@drawable/leaf" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Next" android:id="@+id/button3" android:textSize="20dp" android:textStyle="bold" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:layout_margin="4dip" android:layout_weight="0"></Button>
    </LinearLayout>
    